--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap"
       rel="stylesheet"
     />
+    <meta name="google-site-verification" content="uYTgPMRRB1FxKT5YpXb2PcaMOT-7rRwVbzql7xkTvRA" />
   </head>
   <body>
     <!-- main container-->
